--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,13 +10,16 @@
     "classnames": "^2.3.1",
     "firebase": "^9.6.10",
     "mapbox-gl": "^2.7.1",
+    "moment": "^2.29.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-map-gl": "^7.0.10",
     "react-redux": "^7.2.6",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-slideshow-image": "^3.7.2",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
     "web-vitals": "^2.1.4"
